added todo list

--- a/check.ipynb
+++ b/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -376,48 +376,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1541</th>\n",
-       "      <td>The image features a statue of a person's head...</td>\n",
-       "      <td>1. The image features a small statue or sculpt...</td>\n",
-       "      <td>13946670082</td>\n",
-       "      <td>1541</td>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>The image features a statue of a bird, possibl...</td>\n",
+       "      <td>1. The image features a statue of a bird, poss...</td>\n",
+       "      <td>29881810051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1665</th>\n",
-       "      <td>This image depicts an empty street on a rainy ...</td>\n",
-       "      <td>1. The image depicts an empty street on a rain...</td>\n",
-       "      <td>15483670089</td>\n",
-       "      <td>1665</td>\n",
+       "      <th>1</th>\n",
+       "      <td>74</td>\n",
+       "      <td>In the 1970s and 1980s, the stained glass ceil...</td>\n",
+       "      <td>1. The image features a large, colorful staine...</td>\n",
+       "      <td>29014260055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2406</th>\n",
-       "      <td>The image depicts a cave with a small stream o...</td>\n",
-       "      <td>1. The image depicts a cave with a small strea...</td>\n",
-       "      <td>8604640080</td>\n",
-       "      <td>2406</td>\n",
+       "      <th>2</th>\n",
+       "      <td>134</td>\n",
+       "      <td>[The image features a large military helicopte...</td>\n",
+       "      <td>1. The image features a large military helicop...</td>\n",
+       "      <td>37428220445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>179</td>\n",
+       "      <td>Summarize the text in bracket. [The image show...</td>\n",
+       "      <td>1. The image captures a serene view of a large...</td>\n",
+       "      <td>27868870034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>183</td>\n",
+       "      <td>Summarize the text in bracket.[The image captu...</td>\n",
+       "      <td>1. The image captures a breathtaking view of t...</td>\n",
+       "      <td>29693920062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>188</td>\n",
+       "      <td>This is a great place to visit, but not on wee...</td>\n",
+       "      <td>1. The image depicts a group of three people w...</td>\n",
+       "      <td>45345810014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>198</td>\n",
+       "      <td>Welcome to the world of free online text summa...</td>\n",
+       "      <td>1. The image depicts a large bridge spanning a...</td>\n",
+       "      <td>29693920472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>224</td>\n",
+       "      <td>The image features a tree with a bunch of yell...</td>\n",
+       "      <td>1. The image features a tree with a bunch of y...</td>\n",
+       "      <td>29967430015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>227</td>\n",
+       "      <td>The image features a tree with a bunch of yell...</td>\n",
+       "      <td>1. The image features a tree with a bunch of y...</td>\n",
+       "      <td>29967430015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>249</td>\n",
+       "      <td>Congratulations! You have successfully complet...</td>\n",
+       "      <td>1. The image depicts a picturesque scene of a ...</td>\n",
+       "      <td>28866580095</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            SatelliteID  \\\n",
-       "1541  The image features a statue of a person's head...   \n",
-       "1665  This image depicts an empty street on a rainy ...   \n",
-       "2406  The image depicts a cave with a small stream o...   \n",
+       "   SatelliteID                                      Summarization  \\\n",
+       "0           19  The image features a statue of a bird, possibl...   \n",
+       "1           74  In the 1970s and 1980s, the stained glass ceil...   \n",
+       "2          134  [The image features a large military helicopte...   \n",
+       "3          179  Summarize the text in bracket. [The image show...   \n",
+       "4          183  Summarize the text in bracket.[The image captu...   \n",
+       "5          188  This is a great place to visit, but not on wee...   \n",
+       "6          198  Welcome to the world of free online text summa...   \n",
+       "7          224  The image features a tree with a bunch of yell...   \n",
+       "8          227  The image features a tree with a bunch of yell...   \n",
+       "9          249  Congratulations! You have successfully complet...   \n",
        "\n",
-       "                                          Summarization     Captions  \\\n",
-       "1541  1. The image features a small statue or sculpt...  13946670082   \n",
-       "1665  1. The image depicts an empty street on a rain...  15483670089   \n",
-       "2406  1. The image depicts a cave with a small strea...   8604640080   \n",
-       "\n",
-       "      GroundImageIDs  \n",
-       "1541            1541  \n",
-       "1665            1665  \n",
-       "2406            2406  "
+       "                                            Captions  GroundImageIDs  \n",
+       "0  1. The image features a statue of a bird, poss...     29881810051  \n",
+       "1  1. The image features a large, colorful staine...     29014260055  \n",
+       "2  1. The image features a large military helicop...     37428220445  \n",
+       "3  1. The image captures a serene view of a large...     27868870034  \n",
+       "4  1. The image captures a breathtaking view of t...     29693920062  \n",
+       "5  1. The image depicts a group of three people w...     45345810014  \n",
+       "6  1. The image depicts a large bridge spanning a...     29693920472  \n",
+       "7  1. The image features a tree with a bunch of y...     29967430015  \n",
+       "8  1. The image features a tree with a bunch of y...     29967430015  \n",
+       "9  1. The image depicts a picturesque scene of a ...     28866580095  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,10 +487,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image features a statue of a bird, possibly a bird of prey like a hawk or an eagle, sitting on top of a stone pedestal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Summarization'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The image features a statue of a bird, possibly a bird of prey like a hawk or an eagle, sitting on top of a stone pedestal. The bird statue appears to be wearing a crown, giving it a majestic and regal appearance. The statue is positioned in front of a sign, which could be providing information about the bird or its surroundings. The scene is set outdoors, possibly in a park or a similar public space.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Captions'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the 1970s and 1980s, the stained glass ceiling was a popular design trend in architecture. Stained glass\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Summarization'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The image features a large, colorful stained glass ceiling in a building. The ceiling is adorned with a vibrant mosaic design, showcasing a variety of colors and patterns. The stained glass is illuminated by sunlight, casting a warm and inviting glow throughout the space.   In addition to the stained glass ceiling, the room is filled with a multitude of windows, allowing natural light to flood the area. The combination of the stained glass ceiling and the abundance of windows creates a visually stunning and inviting atmosphere in the building.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Captions'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# References\n",
+      "\n",
+      "[1] [2]\n",
+      "\n",
+      "[3] [4]\n",
+      "\n",
+      "# Homework\n",
+      "\n",
+      "# A. Assignment 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Summarization'][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. The image features a large military helicopter parked on a tarmac, surrounded by several people. The helicopter has its door open, allowing people to enter or exit the aircraft. There are at least nine people visible in the scene, with some standing closer to the helicopter and others further away.   In addition to the helicopter, there are a couple of cars parked in the vicinity. One car is located on the left side of the helicopter, while the other car is parked on the right side. The scene appears to be a gathering or event involving the military helicopter and the people around it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Captions'][2])"
+   ]
   },
   {
    "cell_type": "code",
