added experiments for prompt

--- a/check.ipynb
+++ b/check.ipynb
@@ -965,7 +965,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1001,102 +1010,114 @@
        "      <td>18</td>\n",
        "      <td>1. The image features a table with a variety o...</td>\n",
        "      <td>28313350424</td>\n",
-       "      <td>The image depicts a table with various items o...</td>\n",
+       "      <td>The image depicts a cluttered table with vario...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>19</td>\n",
        "      <td>1. The image features a statue of a bird, poss...</td>\n",
        "      <td>29881810051</td>\n",
-       "      <td>The statue features a bird of prey wearing a c...</td>\n",
+       "      <td>The region depicted in the image is likely a p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>35</td>\n",
        "      <td>1. The image depicts a woman standing in the m...</td>\n",
        "      <td>28931880455</td>\n",
-       "      <td>The image depicts a vibrant urban scene in a b...</td>\n",
+       "      <td>The text describes a woman standing in the mid...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>74</td>\n",
        "      <td>1. The image features a large, colorful staine...</td>\n",
        "      <td>29014260055</td>\n",
-       "      <td>The region is known for its stunning and color...</td>\n",
+       "      <td>The region is characterized by a vibrant and i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>134</td>\n",
        "      <td>1. The image features a large military helicop...</td>\n",
        "      <td>37428220445</td>\n",
-       "      <td>The region in the image appears to be an area ...</td>\n",
+       "      <td>The region in this image appears to be a milit...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>179</td>\n",
-       "      <td>1. The image captures a serene view of a large...</td>\n",
-       "      <td>27868870034</td>\n",
-       "      <td>The region depicted in the image is characteri...</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>183</td>\n",
-       "      <td>1. The image captures a breathtaking view of t...</td>\n",
-       "      <td>29693920062</td>\n",
-       "      <td>The region in the image is a rocky coastline w...</td>\n",
+       "      <th>3235</th>\n",
+       "      <td>77851</td>\n",
+       "      <td>1. The image features a tree filled with pink ...</td>\n",
+       "      <td>16142240424</td>\n",
+       "      <td>The region in the image features a beautiful a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>188</td>\n",
-       "      <td>1. The image depicts a group of three people w...</td>\n",
-       "      <td>45345810014</td>\n",
-       "      <td>The image shows three people in the water, wit...</td>\n",
+       "      <th>3236</th>\n",
+       "      <td>77907</td>\n",
+       "      <td>1. The image features a large, ornate white bu...</td>\n",
+       "      <td>32172700467</td>\n",
+       "      <td>The region in the image is known for its orien...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>198</td>\n",
-       "      <td>1. The image depicts a large bridge spanning a...</td>\n",
-       "      <td>29693920472</td>\n",
-       "      <td>The region in this image is characterized by a...</td>\n",
+       "      <th>3237</th>\n",
+       "      <td>77914</td>\n",
+       "      <td>1. The image captures a serene nighttime scene...</td>\n",
+       "      <td>47437240442</td>\n",
+       "      <td>The image portrays a picturesque and serene la...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>207</td>\n",
-       "      <td>1. The image features a dining table with a bo...</td>\n",
-       "      <td>29411240482</td>\n",
-       "      <td>The region is known for its delicious cuisine ...</td>\n",
+       "      <th>3238</th>\n",
+       "      <td>77942</td>\n",
+       "      <td>1. The image features a dragonfly perched on a...</td>\n",
+       "      <td>42610010400</td>\n",
+       "      <td>The region depicted in the image is a verdant ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3239</th>\n",
+       "      <td>77951</td>\n",
+       "      <td>1. The image features a lush green field with ...</td>\n",
+       "      <td>43027020030</td>\n",
+       "      <td>The region is characterized by a picturesque a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3240 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   SatelliteID                                           Captions  \\\n",
-       "0           18  1. The image features a table with a variety o...   \n",
-       "1           19  1. The image features a statue of a bird, poss...   \n",
-       "2           35  1. The image depicts a woman standing in the m...   \n",
-       "3           74  1. The image features a large, colorful staine...   \n",
-       "4          134  1. The image features a large military helicop...   \n",
-       "5          179  1. The image captures a serene view of a large...   \n",
-       "6          183  1. The image captures a breathtaking view of t...   \n",
-       "7          188  1. The image depicts a group of three people w...   \n",
-       "8          198  1. The image depicts a large bridge spanning a...   \n",
-       "9          207  1. The image features a dining table with a bo...   \n",
+       "      SatelliteID                                           Captions  \\\n",
+       "0              18  1. The image features a table with a variety o...   \n",
+       "1              19  1. The image features a statue of a bird, poss...   \n",
+       "2              35  1. The image depicts a woman standing in the m...   \n",
+       "3              74  1. The image features a large, colorful staine...   \n",
+       "4             134  1. The image features a large military helicop...   \n",
+       "...           ...                                                ...   \n",
+       "3235        77851  1. The image features a tree filled with pink ...   \n",
+       "3236        77907  1. The image features a large, ornate white bu...   \n",
+       "3237        77914  1. The image captures a serene nighttime scene...   \n",
+       "3238        77942  1. The image features a dragonfly perched on a...   \n",
+       "3239        77951  1. The image features a lush green field with ...   \n",
        "\n",
-       "   GroundImageIDs                                      Summarization  \n",
-       "0     28313350424  The image depicts a table with various items o...  \n",
-       "1     29881810051  The statue features a bird of prey wearing a c...  \n",
-       "2     28931880455  The image depicts a vibrant urban scene in a b...  \n",
-       "3     29014260055  The region is known for its stunning and color...  \n",
-       "4     37428220445  The region in the image appears to be an area ...  \n",
-       "5     27868870034  The region depicted in the image is characteri...  \n",
-       "6     29693920062  The region in the image is a rocky coastline w...  \n",
-       "7     45345810014  The image shows three people in the water, wit...  \n",
-       "8     29693920472  The region in this image is characterized by a...  \n",
-       "9     29411240482  The region is known for its delicious cuisine ...  "
+       "     GroundImageIDs                                      Summarization  \n",
+       "0       28313350424  The image depicts a cluttered table with vario...  \n",
+       "1       29881810051  The region depicted in the image is likely a p...  \n",
+       "2       28931880455  The text describes a woman standing in the mid...  \n",
+       "3       29014260055  The region is characterized by a vibrant and i...  \n",
+       "4       37428220445  The region in this image appears to be a milit...  \n",
+       "...             ...                                                ...  \n",
+       "3235    16142240424  The region in the image features a beautiful a...  \n",
+       "3236    32172700467  The region in the image is known for its orien...  \n",
+       "3237    47437240442  The image portrays a picturesque and serene la...  \n",
+       "3238    42610010400  The region depicted in the image is a verdant ...  \n",
+       "3239    43027020030  The region is characterized by a picturesque a...  \n",
+       "\n",
+       "[3240 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,42 +1129,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The statue features a bird of prey wearing a crown, possibly a hawk or eagle, standing on a pedestal in an outdoor setting, likely a park or public space. The statue is surrounded by a sign providing information about the bird or its surroundings, giving it a regal appearance.'"
+       "'The region in the image features a table with a variety of items on it, including three bottles, two bowls, a cup, and a pair of scissors. The items are arranged in a symmetrical pattern on the table, with one bottle on the left side, another in the middle, and the third one on the right side. Additionally, there is a piece of paper on the table near the left side of the scene.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Summarization'][1]"
+    "df['Summarization'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1. The image features a statue of a bird, possibly a bird of prey like a hawk or an eagle, sitting on top of a stone pedestal. The bird statue appears to be wearing a crown, giving it a majestic and regal appearance. The statue is positioned in front of a sign, which could be providing information about the bird or its surroundings. The scene is set outdoors, possibly in a park or a similar public space.'"
+       "'1. The image features a table with a variety of items on it. There are three bottles placed on the table, with one bottle located towards the left side, another in the middle, and the third one on the right side of the table.   In addition to the bottles, there are two bowls on the table. One bowl is positioned near the left side of the table, while the other bowl is located closer to the right side. A cup can also be seen on the table, placed near the middle of the scene.   A pair of scissors is present on the table, with one scissor lying on the left side and the other one on the right side of the table. There is also a piece of paper on the table, situated near the left side of the scene.'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Captions'][1]"
+    "df['Captions'][0]"
    ]
   },
   {
